--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/* BODY */
+body {
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: Roboto;
+  letter-spacing: 0.5px;
+}
+
 /* SITE-HEADER */
 .site-header {
   background-color: #fff;
@@ -6,12 +14,13 @@
 /* NAV */
 .sitenav-list {
   list-style: none;
+  /*   font-family: Roboto;
+ */
 }
 
 .sitenav-link {
   color: #000;
   font-size: 13px;
-  font-style: normal;
   font-weight: 500;
   line-height: 15px;
   letter-spacing: 1px;
@@ -31,20 +40,10 @@
 }
 
 .hero-heading {
-  color: #FFF;
   font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
+  font-family: "Roboto Condensed", sans-serif;
   line-height: 1.2
     /* 48px */
-    letter-spacing: 0.5px;
-}
-
-.hero-text {
-  font-size: 16px;
-  line-height: 1.5;
-  color: #FFF;
-  letter-spacing: 0.5px;
 }
 
 .main-link {
@@ -70,8 +69,8 @@
 .feature-heading {
   width: 435px;
   font-size: 72px;
+  font-family: 'Roboto Condensed', sans-serif;
   line-height: 1.2;
-  letter-spacing: 0.5;
 }
 
 /*FEATURE*/
@@ -87,15 +86,9 @@
 
 .feature-title {
   font-size: 24px;
+  font-family: 'Roboto Condensed', sans-serif;
   line-height: 1.2;
-  letter-spacing: 0.5px;
-}
-
-.feature-info {
-  letter-spacing: 0.5px;
-  font-size: 16px;
-  line-height: 1.5;
-}
+ }
 
 /*PROMO*/
 .promo {
@@ -109,12 +102,8 @@
 
 .promo-heading {
   font-size: 40px;
+  font-family: 'Roboto Condensed', sans-serif;
   line-height: 48px;
-}
-
-.promo-text {
-  font-size: 16px;
-  line-height: 1.5;
 }
 
 .promo-higlight {
@@ -142,12 +131,11 @@
 }
 
 .site-footer-links {
+  line-height: 19px;
   width: 224px;
 }
 
 .site-footer-links a {
-  font-size: 16px;
-  line-height: 19px;
   text-decoration: none;
   color: #252420;
 }
