--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,21 @@ body {
 
 /* SITE-HEADER */
 .site-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #fff;
+}
+
+.site-header-actions{
+  display: flex;
+  align-items: center;
 }
 
 /* NAV */
 .sitenav-list {
   list-style: none;
+  display: flex;
   /*   font-family: Roboto;
  */
 }
@@ -32,6 +41,9 @@ body {
 .hero {
   background-color: #252420;
   color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .hero-content {
@@ -73,6 +85,12 @@ body {
   line-height: 1.2;
 }
 
+.feature-list{
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+}
+
 /*FEATURE*/
 .feature {
   width: 340px;
@@ -94,6 +112,9 @@ body {
 .promo {
   background-color: #252420;
   color: #FFF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .promo-content {
@@ -116,6 +137,12 @@ body {
   object-fit: cover;
 }
 
+.site-footer-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*SITE-FOOTER*/
 .site-footer {
   background-color: #f8f8f8;
@@ -125,9 +152,18 @@ body {
   list-style: none;
 }
 
+.site-footer-socials{
+display: flex;
+align-items: center;
+}
+
 .site-footer-divader {
   height: 2px;
   background-color: rgba(37, 36, 32, 0.6);
+}
+
+.site-footer-bottom{
+  display: flex;
 }
 
 .site-footer-links {
