--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
   display: flex;
   list-style: none;
   justify-content: space-between;
-  padding: 0;
+  padding: 0;}
 
 /*FEATURE*/
 .feature {
