--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ body {
   border-radius: 50%;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100px;
   height: 100px;
   background-color: rgba(255, 117, 0, 0.2);
