--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .logo-link {
-  transition: opacity 0.4 ease;
+  transition: opacity 0.4s ease;
 }
 
 .logo-link:hover {
@@ -57,7 +57,7 @@ body {
   letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
-  transition: color 0.8 ease, opacity 0.4 ease;
+  transition: color 0.8 ease, opacity 0.4s ease;
 }
 
 .sitenav-link:hover {
