--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,16 @@ body {
   list-style: none;
   display: flex;
   padding: none;
+  margin: 0;
+  margin-right: 32px;
+}
+
+.sitenav-item {
+  margin-right: 32px;
+}
+
+.sitenav-item:last-child {
+  margin-right: 0;
 }
 
 .sitenav-link {
@@ -84,11 +94,26 @@ body {
 
 }
 
+
+
 .hero-heading {
+  margin: 0;
+  margin-bottom: 24px;
   font-size: 40px;
   font-family: "Roboto Condensed", sans-serif;
   line-height: 1.2
     /* 48px */
+}
+
+.hero-text {
+  margin: 0;
+  margin-bottom: 32px;
+}
+
+.hero-img {
+  height: 510px;
+  width: 510px;
+  border-radius: 8px;
 }
 
 /* MAIN LINK */
@@ -114,13 +139,10 @@ body {
   opacity: 0.6;
 }
 
-.hero-img {
-  height: 510px;
-  width: 510px;
-  border-radius: 8px;
-}
 
 .orange-line {
+  margin: 0;
+  margin-bottom: 40px;
   border: none;
   width: 80px;
   height: 3px;
@@ -134,23 +156,29 @@ body {
 }
 
 .feature-heading {
-  width: 435px;
+  margin: 0;
+  margin-bottom: 72px;
+  width: 440px;
   font-size: 72px;
   font-family: 'Roboto Condensed', sans-serif;
-  line-height: 1.2;
+  letter-spacing: 0.5px;
 }
 
 .feature-list {
+  margin: 0;
   display: flex;
   list-style: none;
-  justify-content: space-between;
-  padding: 0;
+
 }
 
 /*FEATURE*/
 .feature {
-
+  margin-right: 40px;
   width: 340px;
+}
+
+.feature:last-child {
+  margin: 0;
 }
 
 .feature-icon-wrapper {
@@ -186,9 +214,24 @@ body {
 }
 
 .promo-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
   font-size: 40px;
   font-family: 'Roboto Condensed', sans-serif;
   line-height: 48px;
+}
+
+.promo-text-wrapper {
+  margin-bottom: 24px;
+}
+
+.promo-text {
+  margin: 0;
+
+}
+
+.promp:last-child {
+  margin-bottom: 0;
 }
 
 .promo-higlight {
@@ -216,7 +259,8 @@ body {
 }
 
 .site-footer ul {
-  padding: 0;
+  margin: 0;
+
   list-style: none;
 }
 
@@ -224,6 +268,14 @@ body {
   display: flex;
   align-items: center;
   padding: 0;
+}
+
+.site-footer-socials li {
+  margin-right: 16px;
+}
+
+.site-footer-socials li:last-child {
+  margin-right: 0;
 }
 
 .site-footer-socials a {
@@ -240,6 +292,8 @@ body {
 }
 
 .site-footer-divader {
+  margin-top: 40px;
+  margin-bottom: 64px;
   height: 2px;
   border: 0;
   background-color: rgba(37, 36, 32, 0.6);
@@ -250,10 +304,18 @@ body {
 }
 
 .site-footer-links {
-
+  padding: 0;
+  margin: 0;
+  margin-right: 68px;
   line-height: 19px;
   width: 224px;
 }
+
+.site-footer-links:last-child{
+  margin-right: 0;
+}
+
+
 
 .site-footer-links a {
   text-decoration: none;
